@@ -915,7 +915,7 @@ public class InstallationStateTableModel extends AbstractTableModel implements C
 
 			// Add in values in correct ordering
 			String[] displayLabels = ActionRequest.getDisplayLabelsForChoice();
-			actionsForProduct.retainAll(Arrays.asList(displayLabels));
+			actionsForProduct.retainAll(List.of(displayLabels));
 
 			Logging.debug("Possible actions as array  ", actionsForProduct);
 		}
@@ -1049,11 +1049,7 @@ public class InstallationStateTableModel extends AbstractTableModel implements C
 
 	@Override
 	public int getRowCount() {
-		if (filter == null) {
-			return sortedProductsList.size();
-		} else {
-			return filter.length;
-		}
+		return filter == null ? sortedProductsList.size() : filter.length;
 	}
 
 	@Override
